--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,19 +1,27 @@
 name: "Install Flutter Dependencies"
 
-description: "dependencies install step"
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
-runs:
-  using: "composite"
-  steps:
-    - name: "Read flutter version from fvm config"
-      id: flutter_info
-      run: |
-        FLUTTER_VERSION=$(jq -r '.flutterSdkVersion' ./.fvm/fvm_config.json)
-        echo "FLUTTER_VERSION=$FLUTTER_VERSION" >> $GITHUB_ENV
-      shell: bash
+jobs:
+  install-dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Checkout repository"
+        uses: actions/checkout@v3
 
-    - name: "Setup Flutter"
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: ${{ env.FLUTTER_VERSION }}
-        cache: true
+      - name: "Read flutter version from fvm config"
+        id: flutter_info
+        run: |
+          FLUTTER_VERSION=$(jq -r '.flutterSdkVersion' ./.fvm/fvm_config.json)
+          echo "FLUTTER_VERSION=$FLUTTER_VERSION" >> $GITHUB_ENV
+        shell: bash
+
+      - name: "Setup Flutter"
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          cache: true
