--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -13,15 +13,8 @@ jobs:
       - name: "Checkout repository"
         uses: actions/checkout@v3
 
-      - name: "Read flutter version from fvm config"
-        id: flutter_info
-        run: |
-          FLUTTER_VERSION=$(jq -r '.flutterSdkVersion' ./.fvm/fvm_config.json)
-          echo "FLUTTER_VERSION=$FLUTTER_VERSION" >> $GITHUB_ENV
-        shell: bash
-
       - name: "Setup Flutter"
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+          flutter-version: "3.32.8"
           cache: true
