--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,3 +18,6 @@ jobs:
         with:
           flutter-version: "3.32.8"
           cache: true
+
+      - name: "Build APK"
+        run: flutter build apk --debug
